Dark mode fix.

--- a/assets/css/djot.css
+++ b/assets/css/djot.css
@@ -607,17 +607,18 @@ figure.wp-djot-embed figcaption {
         color: #8b949e;
     }
 
+    .djot-content th,
+    .djot-content td {
+        border-color: #30363d;
+        color: #c9d1d9;
+    }
+
     .djot-content th {
         background-color: #161b22;
     }
 
     .djot-content tr:nth-child(even) {
         background-color: #161b22;
-    }
-
-    .djot-content th,
-    .djot-content td {
-        border-color: #30363d;
     }
 
     .djot-content hr {
